# blog

./: .gitignore  .gitmodules  .npmrc  .prettierignore  404.html  CNAME  Cargo.toml  Dockerfile  Makefile  README.md  askama.toml  build.go  build.sh  build.ts  bun.lockb  bunfig.toml  chaos-theory.html  collatz-conjecture.html  fonts  fonts.go  go.mod  go.sum  google.html  hashmap.json  history-of-toilet-paper.html  index.html  index.xml  main.go  markdoc.config.ts  mise.toml  nixpacks.toml  package-lock.json  package.json  pnpm-lock.yaml  serve  serve.go  site.webmanifest  sitemap.xml  the-phalanx-formation.html  tsconfig.json  (+3 more)
.changeset/: add-shortTitle-to-all-nav-items.md  add-split-brain-post.md  chilly-avocados-push.md  config.json  cool-bugs-hang.md  cool-ghosts-live.md  dull-boxes-impress.md  few-jars-admire.md  fifty-avocados-tease.md  fifty-toes-arrive.md  funny-trainers-film.md  good-horses-provide.md  healthy-dolls-serve.md  include-split-brain-in-homepage-links.md  little-walls-camp.md  loud-rockets-sniff.md  metal-gifts-invent.md  modern-pets-drop.md  new-islands-doubt.md  nice-jeans-obey.md  ninety-pets-float.md  ninety-seals-listen.md  old-jars-serve.md  perfect-flies-pull.md  poor-gifts-listen.md  popular-crews-cross.md  purple-falcons-smell.md  quiet-countries-kneel.md  rude-gifts-dance.md  rude-pears-relax.md  selfish-items-smell.md  silly-needles-suffer.md  slimy-cameras-hide.md  slow-humans-judge.md  smooth-carrots-wait.md  soft-boxes-fold.md  strange-moose-draw.md  stupid-knives-invite.md  swift-walls-applaud.md  tasty-ducks-agree.md  (+4 more)
css/: global.css  (+2 more)
(+461 files in other folders)
