[package]
name = "blog"
edition = "2024"

[dependencies]
highlight = { git = "https://github.com/noClaps/znak" }
html = { git = "https://github.com/noClaps/znak" }
tree-sitter-bash = "0.25.1"
tree-sitter-c = "0.24.1"
tree-sitter-html = "0.23.2"
tree-sitter-json = "0.24.8"
tree-sitter-python = "0.25.0"
tree-sitter-typescript = "0.23.2"
